# animal-game

./: .gitignore  CMakeLists.txt  Dockerfile  Doxyfile  README.md  animal.sublime-project  animal_combined.c  doxyfile.in  format.sh  index.html  main.c  params.json
docs/html/: animal_8h.html  animal_8h_source.html  animal__game_8h_source.html  annotated.html  btree_8h.html  btree_8h_source.html  classes.html  db_8h.html  db_8h_source.html  dir_026a6e76be8d3097e26c16740716c422.html  dir_d44c64559bbebec7f509842c48db8b23.html  doxygen.css  files.html  functions.html  functions_vars.html  globals.html  globals_defs.html  globals_enum.html  globals_func.html  globals_type.html  index.html  structsls_animal_data.html  structsls_animal_node_schema.html  structsls_b_node.html  structsls_b_tree.html  tabs.css  util_8h.html  util_8h_source.html
docs/html/search/: all_0.js  all_3.js  all_5.js  all_6.js  all_8.js  all_9.js  all_a.js  all_c.js  classes_0.js  defines_1.js  enums_0.js  files_0.js  functions_0.js  functions_1.js  search.css  search.js  typedefs_0.js  variables_3.js
docs/latex/: animal_8h.tex  annotated.tex  btree_8h.tex  db_8h.tex  dir_026a6e76be8d3097e26c16740716c422.tex  dir_d44c64559bbebec7f509842c48db8b23.tex  files.tex  index.tex  refman.tex  structsls_animal_data.tex  structsls_animal_node_schema.tex  structsls_b_node.tex  structsls_b_tree.tex  util_8h.tex
include/animal/: animal.h  animal_game.h  btree.h  db.h  util.h
src/: animal.c  animal.h  btree.c  btree.h  db.c  main.c  util.c  util.h
tests/: animal_test.cc  btree_test.cc  game_test.cc  inc.h  sql_test.cc  test_run.cc
